--- a/pg/個別カルテ作成手順書.md
+++ b/pg/個別カルテ作成手順書.md
@@ -53,18 +53,79 @@
 
 ## 🔄 カルテ作成の流れ
 
-### 全体の流れ
-```
-1. プロジェクト作成
-   ↓
-2. 支援スケジュール設定
-   ↓
-3. カルテ自動生成（空データ）
-   ↓
-4. カルテ内容入力・編集
-   ↓
-5. カルテ確定・共有
-```
+### 詳細な作業フロー（新人向け完全ガイド）
+
+#### **STEP 1: プロジェクト作成**
+- **担当ロール**: `BUSINESS_MGR`（事業責任者）または `SALES_MGR`（営業責任者）
+- **作業場所**: BO（Back Office）管理画面
+- **具体的作業**:
+  1. BOにログイン → 「プロジェクト」メニューをクリック
+  2. 「新規作成」ボタンをクリック
+  3. 顧客情報、プロジェクト詳細を入力して保存
+  4. プロジェクトメンバー（支援者・営業担当者）を追加
+- **成果物**: プロジェクト基本情報の登録完了
+
+#### **STEP 2: 支援スケジュール設定**
+- **担当ロール**: `SUPPORTER_MGR`（支援者責任者）または `SUPPORTER`（支援者）
+- **作業場所**: BO（Back Office） → プロジェクト詳細画面
+- **具体的作業**:
+  1. 対象プロジェクトの詳細画面にアクセス
+  2. 「スケジュール」タブをクリック
+  3. 「新規スケジュール追加」ボタンをクリック
+  4. 支援日時・参加者・支援内容予定を入力
+  5. 「保存」ボタンでスケジュール確定
+- **成果物**: 支援スケジュールの登録完了
+- **重要**: この作業完了と同時に、対応するカルテが **システムで自動生成** されます
+
+#### **STEP 3: カルテ自動生成（空データ）**
+- **担当ロール**: システム自動処理（人的作業なし）
+- **作業場所**: システム内部処理
+- **具体的処理**:
+  - スケジュール保存と同時に、空のカルテデータを自動作成
+  - カルテID、プロジェクトID、支援日時などの基本情報を自動設定
+  - 初期状態は「下書き」フラグ = `true`（顧客には非表示）
+- **成果物**: 入力待ちの空カルテの生成完了
+
+#### **STEP 4: カルテ内容入力・編集**
+- **担当ロール**: `SUPPORTER`（支援者）※実際に支援を行った担当者
+- **作業場所**: BO（Back Office） → カルテ一覧 → カルテ詳細
+- **具体的作業**:
+  1. BOログイン → ヘッダー「カルテ」をクリック
+  2. 対象プロジェクトのカルテを一覧から選択
+  3. カルテ詳細画面で以下を入力:
+     - **必須項目**: お客様名、SAP支援チーム、支援実施内容、フィードバック、宿題
+     - **任意項目**: 資料、成果物、課題・所感など
+  4. 「一時保存」で下書き保存（編集途中の場合）
+- **成果物**: 支援内容が記録されたカルテ（下書き状態）
+- **所要時間**: 支援後30分程度（当日中の入力を推奨）
+
+#### **STEP 5: カルテ確定・共有**
+- **担当ロール**: `SUPPORTER`（カルテ作成者）または `SUPPORTER_MGR`（支援者責任者）
+- **作業場所**: BO（Back Office） → カルテ詳細画面
+- **具体的作業**:
+  1. カルテ内容の最終確認
+     - 必須項目がすべて入力済みかチェック
+     - 誤字脱字、内容の妥当性を確認
+     - 顧客に見せても問題ない内容かチェック
+  2. 「下書きフラグ」を `false` に変更
+  3. 「確定保存」ボタンをクリック
+  4. 必要に応じて関係者にメール通知
+- **成果物**: 顧客・関係者が閲覧可能な確定カルテ
+- **確認方法**: FO（顧客画面）でカルテが表示されることを確認
+
+### 📊 ロール別作業分担表
+| STEP | 事業責任者 | 営業責任者 | 支援者責任者 | 支援者 | 営業担当 |
+|------|-----------|----------|------------|-------|---------|
+| 1. プロジェクト作成 | ✅主担当 | ✅主担当 | - | - | △協力 |
+| 2. スケジュール設定 | - | △確認 | ✅主担当 | ✅実施可 | △協力 |
+| 3. 自動生成 | - | - | - | - | - |
+| 4. 内容入力 | - | - | △確認 | ✅主担当 | △協力 |
+| 5. 確定・共有 | - | △確認 | ✅承認可 | ✅主担当 | - |
+
+### ⏰ 推奨タイムライン
+- **支援実施後**: 当日中にカルテ入力開始
+- **入力完了**: 支援日から **2営業日以内**
+- **確定・共有**: 入力完了から **1営業日以内**
 
 ---
 
