--- a/pg/iret/FO/ソルバーソーシング機能フローチャート.md
+++ b/pg/iret/FO/ソルバーソーシング機能フローチャート.md
@@ -1,18 +1,19 @@
-# ソルバーソーシング機能フローチャート
+# 人材要件機能フローチャート
 
 ## 📋 概要
-ソルバーソーシング機能（人材要件機能）は、法人ソルバーおよび個人ソルバーの登録・管理を行うシステムです。
+人材要件機能（ソルバーソーシング機能）は、法人ソルバーが個人ソルバーの登録・管理を行うシステムです。
 法人ソルバーの情報管理から、所属する個人ソルバーの申請・承認・管理まで一貫したワークフローを提供します。
 
-### 対象ユーザー
-- APT（管理者）: 全機能利用可能
-- SOLVER_STAFF（法人ソルバー）: 所属法人の機能のみ利用可能
+### 対象ユーザー（アクター）
+- **APT（管理者）**: 全機能利用可能、システム全体の監視・管理
+- **SOLVER_STAFF（法人ソルバー担当者）**: 所属法人の個人ソルバー管理のみ
+- **個人ソルバー候補者**: 申請情報の提供対象
+- **システム**: 自動処理・通知の実行主体
 
 ### 業務上の目的
-- 法人ソルバーの情報管理
-- 個人ソルバーの申請・審査プロセス
-- ソルバー候補から個人ソルバーへの登録フロー
-- 稼働率・単価の定期更新
+- 法人ソルバーから個人ソルバーへの人材要件登録申請
+- 個人ソルバーの資格・能力審査プロセス
+- 人材の稼働状況・単価管理
 
 ---
 
@@ -30,77 +31,70 @@
 
 ```mermaid
 flowchart TD
-    Start([開始]) --> Login[ログイン]
-    Login --> Menu[ソルバーメニュー画面]
-    Menu --> SelectCorp[法人ソルバー選択]
-    SelectCorp --> CorpCheck{法人ソルバー情報<br/>登録済み？}
+    Start([開始]) --> Login[SOLVER_STAFF: システムにログイン]
+    Login --> Menu[SOLVER_STAFF: ソルバーメニュー画面を表示]
+    Menu --> SelectCorp[SOLVER_STAFF: 法人ソルバーを選択]
+    SelectCorp --> CorpCheck{システム: 法人ソルバー情報<br/>登録済み？}
     
-    CorpCheck -->|No| InitCorpInfo[法人ソルバー情報入力]
-    InitCorpInfo --> CorpInfoSave[法人ソルバー情報保存]
+    CorpCheck -->|No| InitCorpInfo[SOLVER_STAFF: 法人ソルバー情報を入力]
+    InitCorpInfo --> CorpInfoSave[システム: 法人ソルバー情報を保存]
     CorpInfoSave --> MenuChoice
     
-    CorpCheck -->|Yes| MenuChoice{機能選択}
+    CorpCheck -->|Yes| MenuChoice{SOLVER_STAFF: 機能を選択}
     
-    MenuChoice -->|法人ソルバー情報詳細| CorpDetail[法人ソルバー情報詳細]
-    MenuChoice -->|新規ソルバー申請| NewSolverApp[新規個人ソルバー申請]
-    MenuChoice -->|ソルバー候補| CandidateList[ソルバー候補一覧]
-    MenuChoice -->|ソルバー一覧| SolverList[個人ソルバー一覧]
-    MenuChoice -->|稼働率・単価更新| UtilRateUpdate[稼働率・単価更新]
-    
-    %% 法人ソルバー情報詳細フロー
-    CorpDetail --> CorpDetailView[法人ソルバー情報表示]
-    CorpDetailView --> CorpDetailEdit[法人ソルバー情報変更]
-    CorpDetailEdit --> CorpDetailSave[情報保存]
-    CorpDetailSave --> Menu
+    MenuChoice -->|新規ソルバー申請| NewSolverApp[SOLVER_STAFF: 新規個人ソルバー申請画面へ]
+    MenuChoice -->|ソルバー候補| CandidateList[SOLVER_STAFF: ソルバー候補一覧画面へ]
+    MenuChoice -->|ソルバー一覧| SolverList[SOLVER_STAFF: 個人ソルバー一覧画面へ]
+    MenuChoice -->|稼働率・単価更新| UtilRateUpdate[SOLVER_STAFF: 稼働率・単価更新画面へ]
     
     %% 新規個人ソルバー申請フロー
-    NewSolverApp --> BasicInfo[個人ソルバー基本情報入力]
-    BasicInfo --> ScreeningItems[スクリーニング項目入力]
-    ScreeningItems --> CriteriaItems[クライテリア項目入力]
-    CriteriaItems --> TempSave{一時保存？}
-    TempSave -->|Yes| SaveTemp[一時保存実行]
-    TempSave -->|No| ConfirmScreen[確認画面]
+    NewSolverApp --> BasicInfo[SOLVER_STAFF: 個人ソルバー基本情報を入力]
+    BasicInfo --> ScreeningItems[SOLVER_STAFF: スクリーニング項目を入力]
+    ScreeningItems --> CriteriaItems[SOLVER_STAFF: クライテリア項目を入力]
+    CriteriaItems --> TempSave{SOLVER_STAFF: 一時保存する？}
+    TempSave -->|Yes| SaveTemp[システム: 一時保存を実行]
+    TempSave -->|No| ConfirmScreen[システム: 確認画面を表示]
     SaveTemp --> SolverList
-    ConfirmScreen --> SubmitApp[申請実行]
-    SubmitApp --> AppComplete[申請完了]
+    ConfirmScreen --> SubmitApp[SOLVER_STAFF: 申請を実行]
+    SubmitApp --> SystemReview[システム: 申請内容を審査]
+    SystemReview --> AppComplete[システム: 申請完了通知を表示]
     AppComplete --> SolverList
     
     %% ソルバー候補関連フロー
-    CandidateList --> CandidateAction{アクション選択}
-    CandidateAction -->|新規候補申請| NewCandidate[新規ソルバー候補申請]
-    CandidateAction -->|候補詳細| CandidateDetail[ソルバー候補詳細]
+    CandidateList --> CandidateAction{SOLVER_STAFF: アクションを選択}
+    CandidateAction -->|新規候補申請| NewCandidate[SOLVER_STAFF: 新規ソルバー候補申請]
+    CandidateAction -->|候補詳細| CandidateDetail[SOLVER_STAFF: ソルバー候補詳細を表示]
     
-    NewCandidate --> CandidateInfo[候補者情報入力]
-    CandidateInfo --> CandidateSubmit[候補者申請実行]
+    NewCandidate --> CandidateInfo[SOLVER_STAFF: 候補者情報を入力]
+    CandidateInfo --> CandidateSubmit[システム: 候補者申請を処理]
     CandidateSubmit --> CandidateList
     
-    CandidateDetail --> PromoteCheck{個人ソルバー登録？}
-    PromoteCheck -->|Yes| PromoteSolver[個人ソルバーに登録]
+    CandidateDetail --> PromoteCheck{SOLVER_STAFF: 個人ソルバーに登録する？}
+    PromoteCheck -->|Yes| PromoteSolver[システム: 個人ソルバーに登録]
     PromoteCheck -->|No| CandidateList
     PromoteSolver --> SolverList
     
     %% ソルバー一覧フロー
-    SolverList --> SolverAction{アクション選択}
-    SolverAction -->|詳細表示| SolverDetail[個人ソルバー詳細]
-    SolverAction -->|編集| SolverEdit[個人ソルバー編集]
-    SolverAction -->|削除| SolverDelete[個人ソルバー削除]
+    SolverList --> SolverAction{SOLVER_STAFF: アクションを選択}
+    SolverAction -->|詳細表示| SolverDetail[システム: 個人ソルバー詳細を表示]
+    SolverAction -->|編集| SolverEdit[SOLVER_STAFF: 個人ソルバー情報を編集]
+    SolverAction -->|削除| SolverDelete[SOLVER_STAFF: 個人ソルバーを削除]
     
     SolverDetail --> SolverList
-    SolverEdit --> SolverSave[変更保存]
+    SolverEdit --> SolverSave[システム: 変更を保存]
     SolverSave --> SolverList
     SolverDelete --> SolverList
     
     %% 稼働率・単価更新フロー
-    UtilRateUpdate --> RateInput[稼働率・単価入力]
-    RateInput --> BulkUpdate[一括更新実行]
-    BulkUpdate --> UpdateComplete[更新完了]
+    UtilRateUpdate --> RateInput[SOLVER_STAFF: 稼働率・単価を入力]
+    RateInput --> BulkUpdate[システム: 一括更新を実行]
+    BulkUpdate --> UpdateComplete[システム: 更新完了通知を表示]
     UpdateComplete --> SolverList
     
     %% 終了
     SolverList --> End([終了])
     AppComplete --> End
     CandidateList --> End
-    Menu --> End
 ```
 
 ---
@@ -219,95 +213,90 @@ flowchart TD
 
 ---
 
-## 🔄 処理フロー詳細
+## 🔄 処理フロー詳細（アクター別）
 
 ### STEP 1: 法人ソルバー選択・初期設定
-**実行画面**: ソルバーメニュー画面
-**トリガー**: 法人ソルバー選択プルダウン
+**主体**: SOLVER_STAFF（法人ソルバー担当者）
+**対象**: システム
+**画面**: ソルバーメニュー画面
 
-1. **画面操作**
+1. **SOLVER_STAFFがシステムに対して実行するアクション**
+   - アクション: 法人ソルバーを選択
    - 場所: 画面上部のセレクトボックス
-   - 操作: 法人ソルバーを選択
    - ラベル: 「法人ソルバーを選択する」
 
-2. **条件分岐**
-   - 法人ソルバー情報が未登録の場合: 初期設定モーダル表示
-   - 法人ソルバー情報が登録済みの場合: メニューアイテム有効化
+2. **システムがSOLVER_STAFFに対して実行するアクション**
+   - 法人ソルバー情報が未登録の場合: 初期設定モーダルを表示
+   - 法人ソルバー情報が登録済みの場合: メニューアイテムを有効化
 
-3. **初期設定（未登録時）**
-   - モーダル表示: 「法人ソルバー情報を入力してください」
-   - 必要な操作: 法人ソルバー情報の入力
-   - 制限: 入力完了まで個人ソルバー登録不可
+3. **SOLVER_STAFFがシステムに対して実行するアクション（未登録時）**
+   - モーダル対応: 「法人ソルバー情報を入力してください」
+   - 必要な操作: 法人ソルバー情報の入力・保存
+   - 制限: 入力完了まで個人ソルバー登録機能は利用不可
 
 ### STEP 2: 新規個人ソルバー申請
-**実行画面**: 新規個人ソルバー申請画面
-**トリガー**: 「新規ソルバー申請」ボタンクリック
+**主体**: SOLVER_STAFF（法人ソルバー担当者）
+**対象**: 個人ソルバー候補者の情報をシステムに登録
+**画面**: 新規個人ソルバー申請画面
 
-1. **基本情報入力**
-   - セクション: 個人ソルバー基本情報
-   - 必須項目: 個人ソルバー名、個人ソルバーかな、性別、生年月日、職歴
-   - 任意項目: 役職、連絡先、電話番号、画像、学歴、専門テーマ、実績等
+1. **SOLVER_STAFFがシステムに対して実行するアクション**
+   - 基本情報入力: 個人ソルバー名、個人ソルバーかな、性別、生年月日、職歴
+   - スクリーニング項目入力: 8項目について「はい/いいえ」の評価 + エビデンス
+   - クライテリア項目入力: 8項目についてエビデンス（テキスト）
 
-2. **スクリーニング項目入力**
-   - セクション: スクリーニング項目
-   - 入力形式: 各項目について「はい/いいえ」の評価 + エビデンス（テキスト）
-   - 項目数: 8項目
+2. **SOLVER_STAFFがシステムに対して選択するアクション**
+   - 一時保存: 入力途中での保存
+   - 確認画面遷移: 必須項目入力後の最終確認
+   - 申請実行: 確認画面での最終申請
 
-3. **クライテリア項目入力**
-   - セクション: クライテリア項目
-   - 入力形式: 各項目についてエビデンス（テキスト）
-   - 項目数: 8項目
+3. **システムがSOLVER_STAFFに対して実行するアクション**
+   - バリデーション実行: 必須項目、形式チェック
+   - API処理: `POST /solvers`でデータ保存
+   - 結果通知: 「申請が完了しました」または エラーメッセージ表示
 
-4. **一時保存・申請**
-   - 一時保存: 任意の段階で実行可能
-   - 確認画面: 必須項目入力後に遷移可能
-   - 申請実行: 確認画面で最終申請
-
-5. **内部処理**
-   - API呼び出し: `POST /solvers`
-   - ファイルアップロード: プロフィール画像、資料等
-   - バリデーション: 必須項目、形式チェック
-
-6. **結果**
-   - 成功時: 「申請が完了しました」メッセージ表示
-   - エラー時: 「個人ソルバー登録申請には、全必須項目の入力が必要です」
+4. **システムが内部で実行するアクション**
+   - ファイルアップロード: プロフィール画像、資料等の保存
+   - 申請審査: 入力内容の自動チェック
 
 ### STEP 3: ソルバー候補管理
-**実行画面**: ソルバー候補一覧画面
-**トリガー**: 「ソルバー候補」ボタンクリック
+**主体**: SOLVER_STAFF（法人ソルバー担当者）
+**対象**: ソルバー候補者をシステム上で管理
+**画面**: ソルバー候補一覧画面
 
-1. **候補者一覧表示**
-   - 表示内容: 候補者の基本情報、登録ステータス
-   - 操作: 詳細表示、編集、個人ソルバー登録
+1. **SOLVER_STAFFがシステムに対して実行するアクション**
+   - 候補者一覧表示要求: 登録済み候補者の確認
+   - 新規候補申請: 新しい候補者の情報入力
+   - 候補詳細表示要求: 特定候補者の詳細情報確認
 
-2. **個人ソルバー登録**
-   - 確認モーダル: 「個人ソルバーへの登録」
-   - 注意事項: 「登録後はソルバー候補一覧からは削除され、個人ソルバー一覧に表示されます」
-   - 処理: 候補者から個人ソルバーへのステータス変更
+2. **SOLVER_STAFFがシステムに対して決定するアクション**
+   - 個人ソルバー登録判断: 候補者を個人ソルバーに昇格させるかの決定
+   - 確認モーダル対応: 「個人ソルバーへの登録」の最終確認
 
-3. **内部処理**
-   - API呼び出し: `PATCH /solvers/{solver_id}`
-   - ステータス更新: 候補者 → 個人ソルバー
+3. **システムがSOLVER_STAFFに対して実行するアクション**
+   - 注意事項表示: 「登録後はソルバー候補一覧からは削除され、個人ソルバー一覧に表示されます」
+   - ステータス更新処理: 候補者 → 個人ソルバーへの変更実行
+   - API処理: `PATCH /solvers/{solver_id}`
 
 ### STEP 4: 稼働率・単価更新
-**実行画面**: 稼働率・単価更新画面
-**トリガー**: 「稼働率・単価更新」ボタンクリック
+**主体**: SOLVER_STAFF（法人ソルバー担当者）
+**対象**: 所属個人ソルバーの稼働情報をシステム上で更新
+**画面**: 稼働率・単価更新画面
 
-1. **更新対象表示**
-   - 表示形式: テーブル形式で個人ソルバー一覧
-   - 更新項目: 稼働率（今月・来月）、単価（人月・時間）
+1. **SOLVER_STAFFがシステムに対して実行するアクション**
+   - 更新対象確認: 所属個人ソルバー一覧の表示要求
+   - 稼働率入力: 今月・来月の稼働率データ入力
+   - 単価入力: 人月単価・時間単価データ入力
+   - 一括更新実行: 入力完了後の更新処理実行
 
-2. **一括更新**
-   - 入力: 各ソルバーの稼働率・単価を入力
-   - 実行: 一括更新ボタンクリック
+2. **システムがSOLVER_STAFFに対して実行するアクション**
+   - データ表示: テーブル形式での個人ソルバー情報表示
+   - バリデーション: 入力値の妥当性チェック
+   - API処理: `PUT /solvers/utilization-rate/{solver_corporation_id}`
+   - 結果通知: 「更新が完了しました」またはエラーメッセージ表示
 
-3. **内部処理**
-   - API呼び出し: `PUT /solvers/utilization-rate/{solver_corporation_id}`
-   - 一括更新: 複数ソルバーの情報を同時更新
-
-4. **結果**
-   - 成功時: 「更新が完了しました」メッセージ表示
-   - エラー時: 個別のエラーメッセージ表示
+3. **システムが内部で実行するアクション**
+   - 一括更新処理: 複数ソルバーの情報を同時更新
+   - データ整合性チェック: 更新内容の検証
 
 ---
 
