--- a/pg/iret/FO/ソルバーソーシング機能フローチャート.md
+++ b/pg/iret/FO/ソルバーソーシング機能フローチャート.md
@@ -27,82 +27,153 @@
 
 ---
 
-## 📊 フローチャート（プレビュー用）
+## 📊 人材要件機能フローチャート
 
+### 全体フロー
 ```mermaid
 flowchart TD
-    Start([開始]) --> Login[SOLVER_STAFF: システムにログイン]
-    Login --> Menu[SOLVER_STAFF: ソルバーメニュー画面を表示]
-    Menu --> SelectCorp[SOLVER_STAFF: 法人ソルバーを選択]
-    SelectCorp --> CorpCheck{システム: 法人ソルバー情報<br/>登録済み？}
+    Start([開始]) --> Login[👤 SOLVER_STAFF:<br/>システムにログイン]
+    Login --> Menu[👤 SOLVER_STAFF:<br/>ソルバーメニュー画面を表示<br/>📍 /solver/menu]
+    Menu --> SelectCorp[👤 SOLVER_STAFF:<br/>法人ソルバーを選択<br/>🎯 「法人ソルバーを選択する」]
+    SelectCorp --> CorpCheck{🖥️ システム:<br/>法人ソルバー情報<br/>登録済み？}
     
-    CorpCheck -->|No| InitCorpInfo[SOLVER_STAFF: 法人ソルバー情報を入力]
-    InitCorpInfo --> CorpInfoSave[システム: 法人ソルバー情報を保存]
+    CorpCheck -->|❌ 未登録| InitCorpInfo[👤 SOLVER_STAFF:<br/>法人ソルバー情報を入力<br/>📝 初期設定モーダル]
+    InitCorpInfo --> CorpInfoSave[🖥️ システム:<br/>法人ソルバー情報を保存<br/>🔗 API: POST /solver-corporations]
     CorpInfoSave --> MenuChoice
     
-    CorpCheck -->|Yes| MenuChoice{SOLVER_STAFF: 機能を選択}
+    CorpCheck -->|✅ 登録済み| MenuChoice{👤 SOLVER_STAFF:<br/>機能を選択}
     
-    MenuChoice -->|新規ソルバー申請| NewSolverApp[SOLVER_STAFF: 新規個人ソルバー申請画面へ]
-    MenuChoice -->|ソルバー候補| CandidateList[SOLVER_STAFF: ソルバー候補一覧画面へ]
-    MenuChoice -->|ソルバー一覧| SolverList[SOLVER_STAFF: 個人ソルバー一覧画面へ]
-    MenuChoice -->|稼働率・単価更新| UtilRateUpdate[SOLVER_STAFF: 稼働率・単価更新画面へ]
-    
-    %% 新規個人ソルバー申請フロー
-    NewSolverApp --> BasicInfo[SOLVER_STAFF: 個人ソルバー基本情報を入力]
-    BasicInfo --> ScreeningItems[SOLVER_STAFF: スクリーニング項目を入力]
-    ScreeningItems --> CriteriaItems[SOLVER_STAFF: クライテリア項目を入力]
-    CriteriaItems --> TempSave{SOLVER_STAFF: 一時保存する？}
-    TempSave -->|Yes| SaveTemp[システム: 一時保存を実行]
-    TempSave -->|No| ConfirmScreen[システム: 確認画面を表示]
-    SaveTemp --> SolverList
-    ConfirmScreen --> SubmitApp[SOLVER_STAFF: 申請を実行]
-    SubmitApp --> SystemReview[システム: 申請内容を審査]
-    SystemReview --> AppComplete[システム: 申請完了通知を表示]
-    AppComplete --> SolverList
-    
-    %% ソルバー候補関連フロー
-    CandidateList --> CandidateAction{SOLVER_STAFF: アクションを選択}
-    CandidateAction -->|新規候補申請| NewCandidate[SOLVER_STAFF: 新規ソルバー候補申請]
-    CandidateAction -->|候補詳細| CandidateDetail[SOLVER_STAFF: ソルバー候補詳細を表示]
-    
-    NewCandidate --> CandidateInfo[SOLVER_STAFF: 候補者情報を入力]
-    CandidateInfo --> CandidateSubmit[システム: 候補者申請を処理]
-    CandidateSubmit --> CandidateList
-    
-    CandidateDetail --> PromoteCheck{SOLVER_STAFF: 個人ソルバーに登録する？}
-    PromoteCheck -->|Yes| PromoteSolver[システム: 個人ソルバーに登録]
-    PromoteCheck -->|No| CandidateList
-    PromoteSolver --> SolverList
-    
-    %% ソルバー一覧フロー
-    SolverList --> SolverAction{SOLVER_STAFF: アクションを選択}
-    SolverAction -->|詳細表示| SolverDetail[システム: 個人ソルバー詳細を表示]
-    SolverAction -->|編集| SolverEdit[SOLVER_STAFF: 個人ソルバー情報を編集]
-    SolverAction -->|削除| SolverDelete[SOLVER_STAFF: 個人ソルバーを削除]
-    
-    SolverDetail --> SolverList
-    SolverEdit --> SolverSave[システム: 変更を保存]
-    SolverSave --> SolverList
-    SolverDelete --> SolverList
-    
-    %% 稼働率・単価更新フロー
-    UtilRateUpdate --> RateInput[SOLVER_STAFF: 稼働率・単価を入力]
-    RateInput --> BulkUpdate[システム: 一括更新を実行]
-    BulkUpdate --> UpdateComplete[システム: 更新完了通知を表示]
-    UpdateComplete --> SolverList
+    MenuChoice -->|新規申請| NewSolverApp[👤 SOLVER_STAFF:<br/>新規個人ソルバー申請<br/>🎯 「新規ソルバー申請」]
+    MenuChoice -->|候補管理| CandidateList[👤 SOLVER_STAFF:<br/>ソルバー候補一覧<br/>🎯 「ソルバー候補」]
+    MenuChoice -->|一覧表示| SolverList[👤 SOLVER_STAFF:<br/>個人ソルバー一覧<br/>🎯 「ソルバー一覧」]
+    MenuChoice -->|稼働率更新| UtilRateUpdate[👤 SOLVER_STAFF:<br/>稼働率・単価更新<br/>🎯 「稼働率・単価更新」]
     
     %% 終了
     SolverList --> End([終了])
-    AppComplete --> End
     CandidateList --> End
+    NewSolverApp --> End
+    UtilRateUpdate --> End
+    
+    style Start fill:#dae8fc,stroke:#6c8ebf
+    style End fill:#dae8fc,stroke:#6c8ebf
+    style Login fill:#e1d5e7,stroke:#9673a6
+    style Menu fill:#e1d5e7,stroke:#9673a6
+    style SelectCorp fill:#e1d5e7,stroke:#9673a6
+    style CorpCheck fill:#fff2cc,stroke:#d6b656
+    style InitCorpInfo fill:#f8cecc,stroke:#b85450
+    style CorpInfoSave fill:#e1d5e7,stroke:#9673a6
+    style MenuChoice fill:#fff2cc,stroke:#d6b656
+    style NewSolverApp fill:#e1d5e7,stroke:#9673a6
+    style CandidateList fill:#e1d5e7,stroke:#9673a6
+    style SolverList fill:#e1d5e7,stroke:#9673a6
+    style UtilRateUpdate fill:#e1d5e7,stroke:#9673a6
 ```
 
----
+### 新規個人ソルバー申請フロー
+```mermaid
+flowchart TD
+    Start([新規申請開始]) --> BasicInfo[👤 SOLVER_STAFF:<br/>個人ソルバー基本情報を入力<br/>📋 必須: 名前、かな、性別、生年月日、職歴]
+    BasicInfo --> ScreeningItems[👤 SOLVER_STAFF:<br/>スクリーニング項目を入力<br/>📊 8項目: 評価(はい/いいえ) + エビデンス]
+    ScreeningItems --> CriteriaItems[👤 SOLVER_STAFF:<br/>クライテリア項目を入力<br/>📝 8項目: エビデンス(テキスト)]
+    CriteriaItems --> TempSave{👤 SOLVER_STAFF:<br/>一時保存する？}
+    
+    TempSave -->|✅ Yes| SaveTemp[🖥️ システム:<br/>一時保存を実行<br/>💾 「一時保存しました」]
+    TempSave -->|❌ No| ConfirmScreen[🖥️ システム:<br/>確認画面を表示<br/>🎯 「確認画面に進む」]
+    
+    SaveTemp --> Complete1[✅ 一時保存完了]
+    ConfirmScreen --> SubmitApp[👤 SOLVER_STAFF:<br/>申請を実行<br/>🎯 「申請する」]
+    SubmitApp --> SystemReview[🖥️ システム:<br/>申請内容を審査<br/>🔗 API: POST /solvers]
+    SystemReview --> AppComplete[🖥️ システム:<br/>申請完了通知を表示<br/>✅ 「申請が完了しました」]
+    AppComplete --> Complete2[✅ 申請完了]
+    
+    Complete1 --> End([終了])
+    Complete2 --> End
+    
+    style Start fill:#dae8fc,stroke:#6c8ebf
+    style End fill:#dae8fc,stroke:#6c8ebf
+    style BasicInfo fill:#e1d5e7,stroke:#9673a6
+    style ScreeningItems fill:#e1d5e7,stroke:#9673a6
+    style CriteriaItems fill:#e1d5e7,stroke:#9673a6
+    style TempSave fill:#fff2cc,stroke:#d6b656
+    style SaveTemp fill:#d5e8d4,stroke:#82b366
+    style ConfirmScreen fill:#e1d5e7,stroke:#9673a6
+    style SubmitApp fill:#e1d5e7,stroke:#9673a6
+    style SystemReview fill:#e1d5e7,stroke:#9673a6
+    style AppComplete fill:#d5e8d4,stroke:#82b366
+    style Complete1 fill:#d5e8d4,stroke:#82b366
+    style Complete2 fill:#d5e8d4,stroke:#82b366
+```
 
-## 📁 draw.ioファイル
-- **ファイル名**: `ソルバーソーシング機能フローチャート.drawio`
-- **配置場所**: ルートディレクトリ
-- draw.ioで開いて編集可能です
+### ソルバー候補管理フロー
+```mermaid
+flowchart TD
+    Start([候補管理開始]) --> CandidateAction{👤 SOLVER_STAFF:<br/>アクションを選択}
+    
+    CandidateAction -->|新規申請| NewCandidate[👤 SOLVER_STAFF:<br/>新規ソルバー候補申請<br/>🎯 「新規ソルバー候補申請」]
+    CandidateAction -->|詳細表示| CandidateDetail[👤 SOLVER_STAFF:<br/>ソルバー候補詳細を表示<br/>👁️ 候補者詳細表示]
+    
+    NewCandidate --> CandidateInfo[👤 SOLVER_STAFF:<br/>候補者情報を入力<br/>📝 基本情報 + 能力情報]
+    CandidateInfo --> CandidateSubmit[🖥️ システム:<br/>候補者申請を処理<br/>🔗 API: POST /solver-candidates]
+    CandidateSubmit --> CandidateList[📋 候補者一覧に追加]
+    
+    CandidateDetail --> PromoteCheck{👤 SOLVER_STAFF:<br/>個人ソルバーに<br/>登録する？}
+    PromoteCheck -->|✅ Yes| PromoteConfirm[🖥️ システム:<br/>確認モーダル表示<br/>⚠️ 「個人ソルバーへの登録」]
+    PromoteCheck -->|❌ No| CandidateList
+    
+    PromoteConfirm --> PromoteSolver[🖥️ システム:<br/>個人ソルバーに登録<br/>🔗 API: PATCH /solvers/{id}]
+    PromoteSolver --> SolverList[📋 個人ソルバー一覧に移動]
+    
+    CandidateList --> End([終了])
+    SolverList --> End
+    
+    style Start fill:#dae8fc,stroke:#6c8ebf
+    style End fill:#dae8fc,stroke:#6c8ebf
+    style CandidateAction fill:#fff2cc,stroke:#d6b656
+    style NewCandidate fill:#e1d5e7,stroke:#9673a6
+    style CandidateDetail fill:#e1d5e7,stroke:#9673a6
+    style CandidateInfo fill:#e1d5e7,stroke:#9673a6
+    style CandidateSubmit fill:#e1d5e7,stroke:#9673a6
+    style PromoteCheck fill:#fff2cc,stroke:#d6b656
+    style PromoteConfirm fill:#f8cecc,stroke:#b85450
+    style PromoteSolver fill:#e1d5e7,stroke:#9673a6
+    style CandidateList fill:#d5e8d4,stroke:#82b366
+    style SolverList fill:#d5e8d4,stroke:#82b366
+```
+
+### 稼働率・単価更新フロー
+```mermaid
+flowchart TD
+    Start([稼働率更新開始]) --> RateDisplay[🖥️ システム:<br/>更新対象を表示<br/>📊 所属個人ソルバー一覧]
+    RateDisplay --> RateInput[👤 SOLVER_STAFF:<br/>稼働率・単価を入力<br/>📈 今月・来月稼働率<br/>💰 人月・時間単価]
+    RateInput --> Validation[🖥️ システム:<br/>入力値をチェック<br/>✅ バリデーション実行]
+    Validation --> ValidationResult{🖥️ システム:<br/>入力値は正しい？}
+    
+    ValidationResult -->|❌ エラー| ErrorDisplay[🖥️ システム:<br/>エラーメッセージ表示<br/>❌ 「正しい値を入力してください」]
+    ErrorDisplay --> RateInput
+    
+    ValidationResult -->|✅ OK| BulkUpdate[🖥️ システム:<br/>一括更新を実行<br/>🔗 API: PUT /solvers/utilization-rate/{id}]
+    BulkUpdate --> UpdateResult{🖥️ システム:<br/>更新は成功？}
+    
+    UpdateResult -->|❌ 失敗| UpdateError[🖥️ システム:<br/>エラーメッセージ表示<br/>❌ 「更新に失敗しました」]
+    UpdateError --> RateInput
+    
+    UpdateResult -->|✅ 成功| UpdateComplete[🖥️ システム:<br/>更新完了通知を表示<br/>✅ 「更新が完了しました」]
+    UpdateComplete --> SolverList[📋 個人ソルバー一覧に戻る]
+    SolverList --> End([終了])
+    
+    style Start fill:#dae8fc,stroke:#6c8ebf
+    style End fill:#dae8fc,stroke:#6c8ebf
+    style RateDisplay fill:#e1d5e7,stroke:#9673a6
+    style RateInput fill:#e1d5e7,stroke:#9673a6
+    style Validation fill:#e1d5e7,stroke:#9673a6
+    style ValidationResult fill:#fff2cc,stroke:#d6b656
+    style ErrorDisplay fill:#f8cecc,stroke:#b85450
+    style BulkUpdate fill:#e1d5e7,stroke:#9673a6
+    style UpdateResult fill:#fff2cc,stroke:#d6b656
+    style UpdateError fill:#f8cecc,stroke:#b85450
+    style UpdateComplete fill:#d5e8d4,stroke:#82b366
+    style SolverList fill:#d5e8d4,stroke:#82b366
+```
 
 ---
 
