--- a/pg/iret/FO/ソルバーソーシング機能フローチャート.md
+++ b/pg/iret/FO/ソルバーソーシング機能フローチャート.md
@@ -1,4 +1,4 @@
-# 人材要件機能フローチャート
+# 人材要件機能フローチャート（完全版）
 
 ## 📋 概要
 人材要件機能（ソルバーソーシング機能）は、法人ソルバーが個人ソルバーの登録・管理を行うシステムです。
@@ -21,9 +21,13 @@
 - 参照したPDF: 【FY25】ソルバーソーシング機能(対応範囲のみ）.pdf
 - 参照したSVG: ER図.drawio.svg、新業務フロー図.drawio.svg
 - 関連ソースコード: 
-  - /home/sdt_op/projects/util/pg/iret/FO/ssap-partner-portal-fo-frontend/src/pages/solver/menu.vue
-  - /home/sdt_op/projects/util/pg/iret/FO/ssap-partner-portal-fo-frontend/src/pages/solver/application.vue
-  - /home/sdt_op/projects/util/pg/iret/FO/ssap-partner-portal-fo-frontend/src/lang/ja.json
+  - `/ssap-partner-portal-fo-frontend/src/pages/solver/menu.vue` - ソルバーメニュー画面
+  - `/ssap-partner-portal-fo-frontend/src/pages/solver/application.vue` - 新規申請画面
+  - `/ssap-partner-portal-fo-frontend/src/lang/ja.json` - 日本語ラベル定義
+  - `/ssap-partner-portal-fo-backend/app/routers/solver.py` - APIエンドポイント
+  - `/ssap-partner-portal-fo-backend/app/schemas/solver.py` - API仕様
+  - `/ssap-partner-portal-fo-backend/app/models/solver.py` - データベースモデル
+  - `/ssap-partner-portal-fo-frontend/src/types/Solver.ts` - TypeScript型定義
 
 ---
 
@@ -173,6 +177,162 @@ flowchart TD
     style UpdateError fill:#f8cecc,stroke:#b85450
     style UpdateComplete fill:#d5e8d4,stroke:#82b366
     style SolverList fill:#d5e8d4,stroke:#82b366
+```
+
+### エラーハンドリングフロー
+```mermaid
+flowchart TD
+    Error([エラー発生]) --> ErrorType{🖥️ システム:<br/>エラー種別判定}
+    
+    ErrorType -->|バリデーションエラー| ValidationError[🖥️ システム:<br/>バリデーションエラー表示<br/>❌ HTTPステータス: 400]
+    ErrorType -->|権限エラー| AuthError[🖥️ システム:<br/>権限エラー表示<br/>❌ HTTPステータス: 403]
+    ErrorType -->|データ不存在| NotFoundError[🖥️ システム:<br/>データ不存在エラー<br/>❌ HTTPステータス: 404]
+    ErrorType -->|更新競合| ConflictError[🖥️ システム:<br/>楽観ロックエラー<br/>❌ HTTPステータス: 409]
+    ErrorType -->|サーバーエラー| ServerError[🖥️ システム:<br/>内部サーバーエラー<br/>❌ HTTPステータス: 500]
+    
+    ValidationError --> ValidationDetail{🖥️ システム:<br/>詳細エラー判定}
+    ValidationDetail -->|必須項目未入力| RequiredError[❌ 「○○は必須項目です」]
+    ValidationDetail -->|形式不正| FormatError[❌ 「正しい形式で入力してください」]
+    ValidationDetail -->|条件付き必須| ConditionalError[❌ 「スクリーニング評価がはいの場合、<br/>エビデンスは必須です」]
+    ValidationDetail -->|ファイルエラー| FileError[❌ 「jpg, png形式で2MB以下の<br/>ファイルを選択してください」]
+    
+    AuthError --> AuthDetail{🖥️ システム:<br/>認証エラー詳細}
+    AuthDetail -->|未ログイン| LoginRequired[❌ 「ログインが必要です」]
+    AuthDetail -->|権限不足| InsufficientRole[❌ 「アクセス権限がありません」]
+    AuthDetail -->|他法人データ| CrossCorpError[❌ 「他法人のデータにはアクセスできません」]
+    
+    ConflictError --> ConflictDetail[❌ 「更新が競合した為、処理に失敗しました。<br/>再度、変更を入力してください」]
+    
+    RequiredError --> UserRetry[👤 SOLVER_STAFF:<br/>エラー修正・再入力]
+    FormatError --> UserRetry
+    ConditionalError --> UserRetry
+    FileError --> UserRetry
+    LoginRequired --> LoginPage[📍 ログイン画面へリダイレクト]
+    InsufficientRole --> AccessDenied[📍 403エラーページ表示]
+    CrossCorpError --> AccessDenied
+    ConflictDetail --> UserRetry
+    ServerError --> ErrorPage[📍 500エラーページ表示]
+    NotFoundError --> NotFoundPage[📍 404エラーページ表示]
+    
+    UserRetry --> RetryAction[👤 SOLVER_STAFF:<br/>修正後に再実行]
+    
+    style Error fill:#f8cecc,stroke:#b85450
+    style ErrorType fill:#fff2cc,stroke:#d6b656
+    style ValidationError fill:#f8cecc,stroke:#b85450
+    style AuthError fill:#f8cecc,stroke:#b85450
+    style NotFoundError fill:#f8cecc,stroke:#b85450
+    style ConflictError fill:#f8cecc,stroke:#b85450
+    style ServerError fill:#f8cecc,stroke:#b85450
+    style ValidationDetail fill:#fff2cc,stroke:#d6b656
+    style AuthDetail fill:#fff2cc,stroke:#d6b656
+    style RequiredError fill:#ffcccc,stroke:#ff0000
+    style FormatError fill:#ffcccc,stroke:#ff0000
+    style ConditionalError fill:#ffcccc,stroke:#ff0000
+    style FileError fill:#ffcccc,stroke:#ff0000
+    style LoginRequired fill:#ffcccc,stroke:#ff0000
+    style InsufficientRole fill:#ffcccc,stroke:#ff0000
+    style CrossCorpError fill:#ffcccc,stroke:#ff0000
+    style ConflictDetail fill:#ffcccc,stroke:#ff0000
+    style UserRetry fill:#e1d5e7,stroke:#9673a6
+    style RetryAction fill:#e1d5e7,stroke:#9673a6
+```
+
+### ファイルアップロードフロー
+```mermaid
+flowchart TD
+    FileStart([ファイル選択開始]) --> FileSelect[👤 SOLVER_STAFF:<br/>ファイルを選択<br/>📁 プロフィール画像または添付資料]
+    FileSelect --> FileValidation[🖥️ システム:<br/>ファイルバリデーション実行]
+    FileValidation --> FileCheck{🖥️ システム:<br/>ファイルは有効？}
+    
+    FileCheck -->|❌ ファイル形式不正| FormatError[❌ 「jpg, png形式のファイルを<br/>選択してください」]
+    FileCheck -->|❌ サイズ超過| SizeError[❌ 「ファイルサイズが大きすぎます<br/>（2MB以下）」]
+    FileCheck -->|✅ 有効| FileUpload[🖥️ システム:<br/>S3にファイルアップロード]
+    
+    FormatError --> FileSelect
+    SizeError --> FileSelect
+    
+    FileUpload --> UploadResult{🖥️ システム:<br/>アップロード成功？}
+    UploadResult -->|❌ 失敗| UploadError[❌ 「ファイルのアップロードに失敗しました」]
+    UploadResult -->|✅ 成功| UploadSuccess[✅ ファイルアップロード完了<br/>🔗 S3キー生成]
+    
+    UploadError --> FileSelect
+    UploadSuccess --> KeyGeneration[🖥️ システム:<br/>ファイルキーID生成<br/>📝 UUID形式]
+    KeyGeneration --> PathGeneration[🖥️ システム:<br/>S3パス生成<br/>📍 {type}/{corporateId}/{fileKeyId}/{fileName}]
+    PathGeneration --> FileComplete[✅ ファイル登録完了]
+    
+    FileComplete --> End([終了])
+    
+    style FileStart fill:#dae8fc,stroke:#6c8ebf
+    style End fill:#dae8fc,stroke:#6c8ebf
+    style FileSelect fill:#e1d5e7,stroke:#9673a6
+    style FileValidation fill:#e1d5e7,stroke:#9673a6
+    style FileCheck fill:#fff2cc,stroke:#d6b656
+    style FormatError fill:#f8cecc,stroke:#b85450
+    style SizeError fill:#f8cecc,stroke:#b85450
+    style FileUpload fill:#e1d5e7,stroke:#9673a6
+    style UploadResult fill:#fff2cc,stroke:#d6b656
+    style UploadError fill:#f8cecc,stroke:#b85450
+    style UploadSuccess fill:#d5e8d4,stroke:#82b366
+    style KeyGeneration fill:#e1d5e7,stroke:#9673a6
+    style PathGeneration fill:#e1d5e7,stroke:#9673a6
+    style FileComplete fill:#d5e8d4,stroke:#82b366
+```
+
+### バリデーション詳細フロー
+```mermaid
+flowchart TD
+    ValidationStart([バリデーション開始]) --> ModeCheck{🖥️ システム:<br/>申請モード確認}
+    
+    ModeCheck -->|候補者申請| CandidateValidation[🖥️ システム:<br/>ソルバー候補申請<br/>バリデーション実行]
+    ModeCheck -->|個人ソルバー申請| SolverValidation[🖥️ システム:<br/>個人ソルバー申請<br/>バリデーション実行]
+    ModeCheck -->|一時保存| TempValidation[🖥️ システム:<br/>一時保存<br/>バリデーション実行]
+    
+    CandidateValidation --> CandidateRequired[🖥️ システム:<br/>候補者必須項目チェック<br/>📋 ふりがな、案件ID、生年月日、<br/>職歴、専門テーマ、実績]
+    
+    SolverValidation --> SolverRequired[🖥️ システム:<br/>個人ソルバー必須項目チェック<br/>📋 全32項目（基本情報+スキル+<br/>スクリーニング+クライテリア）]
+    
+    TempValidation --> TempRequired[🖥️ システム:<br/>一時保存必須項目チェック<br/>📋 最小限（名前、性別、法人ID）]
+    
+    CandidateRequired --> FormatCheck
+    SolverRequired --> FormatCheck
+    TempRequired --> FormatCheck
+    
+    FormatCheck[🖥️ システム:<br/>形式チェック実行] --> FormatResult{🖥️ システム:<br/>形式は正しい？}
+    
+    FormatResult -->|❌ エラー| FormatErrorDetail[❌ 形式エラー詳細表示<br/>・メール形式不正<br/>・電話番号形式不正<br/>・日付形式不正<br/>・単価上限＜下限]
+    FormatResult -->|✅ OK| ScreeningCheck[🖥️ システム:<br/>スクリーニング項目<br/>条件付きバリデーション]
+    
+    ScreeningCheck --> ScreeningResult{🖥️ システム:<br/>スクリーニング評価が<br/>「はい」の項目あり？}
+    ScreeningResult -->|Yes| EvidenceCheck[🖥️ システム:<br/>該当項目のエビデンス<br/>必須チェック]
+    ScreeningResult -->|No| ValidationComplete
+    
+    EvidenceCheck --> EvidenceResult{🖥️ システム:<br/>エビデンスは<br/>入力済み？}
+    EvidenceResult -->|❌ 未入力| EvidenceError[❌ 「スクリーニング評価が「はい」の場合、<br/>エビデンスは必須項目です」]
+    EvidenceResult -->|✅ 入力済み| ValidationComplete[✅ バリデーション完了]
+    
+    FormatErrorDetail --> ValidationError([❌ バリデーションエラー])
+    EvidenceError --> ValidationError
+    ValidationComplete --> ValidationSuccess([✅ バリデーション成功])
+    
+    style ValidationStart fill:#dae8fc,stroke:#6c8ebf
+    style ValidationError fill:#f8cecc,stroke:#b85450
+    style ValidationSuccess fill:#d5e8d4,stroke:#82b366
+    style ModeCheck fill:#fff2cc,stroke:#d6b656
+    style FormatResult fill:#fff2cc,stroke:#d6b656
+    style ScreeningResult fill:#fff2cc,stroke:#d6b656
+    style EvidenceResult fill:#fff2cc,stroke:#d6b656
+    style CandidateValidation fill:#e1d5e7,stroke:#9673a6
+    style SolverValidation fill:#e1d5e7,stroke:#9673a6
+    style TempValidation fill:#e1d5e7,stroke:#9673a6
+    style CandidateRequired fill:#fff2cc,stroke:#d6b656
+    style SolverRequired fill:#fff2cc,stroke:#d6b656
+    style TempRequired fill:#fff2cc,stroke:#d6b656
+    style FormatCheck fill:#e1d5e7,stroke:#9673a6
+    style ScreeningCheck fill:#e1d5e7,stroke:#9673a6
+    style EvidenceCheck fill:#e1d5e7,stroke:#9673a6
+    style FormatErrorDetail fill:#f8cecc,stroke:#b85450
+    style EvidenceError fill:#f8cecc,stroke:#b85450
+    style ValidationComplete fill:#d5e8d4,stroke:#82b366
 ```
 
 ---
@@ -371,25 +531,107 @@ flowchart TD
 
 ---
 
-## ⚠️ 注意事項・エラー処理
+## ⚠️ 注意事項・エラー処理（完全版）
 
-### よくあるエラーパターン
-| エラー種別 | 発生条件 | 表示メッセージ | 対処法 |
-|-----------|---------|--------------|--------|
-| 必須項目未入力 | 必須項目が空 | 「個人ソルバー登録申請には、全必須項目の入力が必要です」 | 必須項目を入力 |
-| ファイルサイズ超過 | 画像ファイルが2MB超過 | 「ファイルサイズが大きすぎます」 | ファイルサイズを縮小 |
-| 認証エラー | 権限不足 | 「アクセス権限がありません」 | 適切なロールでログイン |
-| 更新競合 | 同時更新が発生 | 「更新が競合した為、処理に失敗しました」 | 再度変更を入力 |
-| データ不存在 | 対象データが存在しない | 「はデータが存在しないため、更新できませんでした」 | 対象データを確認 |
+### HTTPステータスコード別エラー一覧
+| HTTPステータス | エラー種別 | 発生条件 | 表示メッセージ | 対処法 |
+|---------------|-----------|---------|--------------|--------|
+| 400 | バリデーションエラー | 必須項目未入力 | 「{項目名} is required.」 | 必須項目を入力 |
+| 400 | バリデーションエラー | 形式不正 | 「正しい形式で入力してください」 | 形式を修正 |
+| 400 | バリデーションエラー | 条件付き必須 | 「if {screening_X.evaluation} is True, {screening_X.evidence} is required.」 | エビデンスを入力 |
+| 400 | バリデーションエラー | 単価関係不正 | 「pricePerPersonMonth is greater than or equal to pricePerPersonMonthLower.」 | 単価の上限・下限を修正 |
+| 400 | ファイルエラー | ファイル形式不正 | 「jpg, png形式のファイルを選択してください」 | 対応形式のファイルを選択 |
+| 400 | ファイルエラー | ファイルサイズ超過 | 「ファイルサイズが大きすぎます（2MB以下）」 | ファイルサイズを縮小 |
+| 401 | 認証エラー | 未ログイン | 「ログインが必要です」 | ログイン画面へリダイレクト |
+| 403 | 権限エラー | 権限不足 | 「アクセス権限がありません」 | 適切なロール（APT, SOLVER_STAFF）でログイン |
+| 403 | 権限エラー | 他法人データアクセス | 「他法人のデータにはアクセスできません」 | 所属法人のデータのみ操作 |
+| 404 | データ不存在 | 対象データなし | 「{データ名}はデータが存在しないため、更新できませんでした」 | 対象データの存在確認 |
+| 409 | 更新競合 | 楽観ロック制御 | 「更新が競合した為、処理に失敗しました。再度、変更を入力してください」 | 最新データで再入力 |
+| 500 | サーバーエラー | 内部処理エラー | 「システムエラーが発生しました」 | システム管理者に連絡 |
 
-### バリデーション規則
-| 項目 | 規則 | エラーメッセージ |
-|-----|------|--------------|
-| 個人ソルバー名 | 必須、文字数制限 | 「個人ソルバー名は必須です」 |
-| 個人ソルバーかな | 必須、ひらがな | 「ひらがなで入力してください」 |
-| メールアドレス | メール形式 | 「正しいメールアドレスを入力してください」 |
-| 電話番号 | 電話番号形式 | 「正しい電話番号を入力してください」 |
-| 画像ファイル | ファイル形式・サイズ | 「jpg, png形式で2MB以下のファイルを選択してください」 |
+### 申請モード別バリデーション規則
+
+#### 1. ソルバー候補申請（mode="create_candidate"）
+| 項目 | 必須/任意 | バリデーション規則 | エラーメッセージ |
+|-----|----------|------------------|--------------|
+| name | 必須 | 文字数制限 | 「name is required.」 |
+| name_kana | 必須 | ひらがな形式 | 「name_kana is required.」 |
+| solver_application_id | 必須 | 文字列 | 「solver_application_id is required.」 |
+| solver_application_name | 必須 | 文字列 | 「solver_application_name is required.」 |
+| corporate_id | 必須 | UUID形式 | 「corporate_id is required.」 |
+| sex | 必須 | 選択肢（man/woman/not_set） | 「sex is required.」 |
+| birth_day | 必須 | yyyy/MM/dd形式 | 「birth_day is required.」 |
+| work_history | 必須 | テキスト | 「work_history is required.」 |
+| specialized_themes | 必須 | テキスト | 「specialized_themes is required.」 |
+| main_achievements | 必須 | テキスト | 「main_achievements is required.」 |
+
+#### 2. 個人ソルバー申請（mode="create_solver", registration_status="saved"）
+| セクション | 項目 | 必須/任意 | バリデーション規則 |
+|-----------|-----|----------|------------------|
+| 基本情報 | name | 必須 | 文字数制限 |
+| 基本情報 | name_kana | 必須 | ひらがな形式 |
+| 基本情報 | corporate_id | 必須 | UUID形式 |
+| 基本情報 | sex | 必須 | 選択肢 |
+| 基本情報 | birth_day | 必須 | 日付形式 |
+| 基本情報 | title | 必須 | 文字列 |
+| 基本情報 | email | 任意 | メール形式 |
+| 基本情報 | phone | 任意 | 電話番号形式 |
+| 基本情報 | face_photo | 必須 | 画像ファイル（jpg/png, 2MB以下） |
+| スキル | issue_map50 | 必須 | 配列（複数選択可） |
+| スキル | operating_status | 必須 | 選択肢 |
+| スキル | academic_background | 必須 | テキスト |
+| スキル | work_history | 必須 | テキスト |
+| スキル | specialized_themes | 必須 | テキスト |
+| スキル | main_achievements | 必須 | テキスト |
+| スキル | english_level | 必須 | 選択肢 |
+| スキル | tsi_areas | 必須 | 配列（複数選択可） |
+| 稼働・単価 | provided_operating_rate | 必須 | 数値（0-100） |
+| 稼働・単価 | provided_operating_rate_next | 必須 | 数値（0-100） |
+| 稼働・単価 | operation_prospects_month_after_next | 必須 | 選択肢 |
+| 稼働・単価 | price_per_person_month | 必須 | 数値（正数） |
+| 稼働・単価 | price_per_person_month_lower | 必須 | 数値（正数、上限以下） |
+| 稼働・単価 | hourly_rate | 必須 | 数値（正数） |
+| 稼働・単価 | hourly_rate_lower | 必須 | 数値（正数、上限以下） |
+| クライテリア | criteria_1 ～ criteria_8 | 必須 | テキスト（各項目） |
+
+#### 3. スクリーニング項目の条件付きバリデーション
+```
+if screening_X.evaluation == true:
+    screening_X.evidence is required
+else:
+    screening_X.evidence is optional
+```
+
+#### 4. 一時保存（registration_status="temporary_saving"）
+| 項目 | 必須/任意 | 備考 |
+|-----|----------|------|
+| name | 必須 | 最小限の必須項目 |
+| corporate_id | 必須 | 法人識別用 |
+| sex | 必須 | 基本情報 |
+| 他の項目 | 任意 | 段階的な入力を許可 |
+
+### ファイルアップロード制限
+| ファイル種別 | 対応形式 | 最大サイズ | S3保存パス | 備考 |
+|------------|---------|----------|-----------|------|
+| プロフィール画像 | jpg, png | 2MB | photos/{corporateId}/{fileKeyId}/ | 個人ソルバー申請時は必須 |
+| 添付資料 | pdf, doc, docx | 5MB | resumes/{corporateId}/{fileKeyId}/ | 任意 |
+
+### 権限制御エラー
+| ロール | アクセス可能データ | 制限事項 | エラー発生条件 |
+|--------|----------------|---------|--------------|
+| APT | 全法人のソルバーデータ | なし | - |
+| SOLVER_STAFF | 所属法人のソルバーデータのみ | corporate_idが一致するデータのみ | 他法人データアクセス時 |
+
+### 楽観ロック制御
+- **DynamoDBのVersionAttribute**を使用
+- 更新時にversionが一致しない場合は409エラー
+- フロントエンドで最新データを再取得して再入力を促す
+
+### Salesforce連携エラー
+| エラー種別 | 発生条件 | 対処法 |
+|-----------|---------|--------|
+| メール送信失敗 | SES送信エラー | バックグラウンドで再試行 |
+| データ形式不正 | Salesforce側での検証エラー | ログで詳細確認 |
 
 ---
 
@@ -401,34 +643,105 @@ flowchart TD
 
 ---
 
-## 📝 補足情報
+## 📝 補足情報（完全版）
 
 ### 新人向けの説明
-1. **ソルバーソーシング機能とは**
-   - 法人ソルバーの情報管理システム
-   - 個人ソルバーの申請・審査プロセス
-   - 人材の稼働状況・単価管理
+1. **人材要件機能（ソルバーソーシング機能）とは**
+   - 法人ソルバーが個人ソルバーの登録・管理を行うシステム
+   - 人材の能力評価（スクリーニング・クライテリア）を含む総合的な人材管理
+   - 稼働状況・単価の動的管理機能
 
-2. **申請プロセスの流れ**
-   - 法人ソルバー情報の登録（初回のみ）
-   - 個人ソルバー候補の申請
-   - スクリーニング・クライテリア評価
-   - 個人ソルバーへの登録
+2. **申請プロセスの詳細フロー**
+   - **STEP 1**: 法人ソルバー情報の初期設定（初回のみ）
+   - **STEP 2**: ソルバー候補の申請（基本情報のみ）
+   - **STEP 3**: 個人ソルバー申請（32項目の詳細情報）
+   - **STEP 4**: スクリーニング8項目の評価（はい/いいえ + エビデンス）
+   - **STEP 5**: クライテリア8項目の評価（エビデンス記入）
+   - **STEP 6**: システム審査・承認・登録完了
 
-3. **重要なポイント**
-   - 必須項目の入力が完了するまで申請不可
-   - 一時保存機能により段階的な入力が可能
-   - 候補者から個人ソルバーへの昇格は一方向
+3. **データ登録の段階性**
+   - **一時保存**: 最小限の必須項目（名前、性別、法人ID）で保存可能
+   - **候補者保存**: 基本情報+α で候補者として登録
+   - **個人ソルバー保存**: 全32項目入力で正式な個人ソルバーとして登録
+
+4. **重要なポイント**
+   - バリデーションは申請モードにより動的に変更
+   - スクリーニング項目は条件付き必須（評価が「はい」の場合のみエビデンス必須）
+   - ファイルアップロードはS3に保存され、ファイルキーIDで管理
+   - 楽観ロック制御により同時更新を防止
+
+### 技術的な仕組み
+1. **データベース設計（DynamoDB）**
+   - 単一テーブル設計（SolverModel）
+   - グローバルセカンダリインデックス（GSI）で高速検索
+   - VersionAttributeによる楽観ロック制御
+
+2. **API設計（FastAPI）**
+   - RESTful API（GET, POST, PUT, PATCH, DELETE）
+   - Pydanticによるリクエスト/レスポンス型定義
+   - JWT認証による権限制御
+
+3. **フロントエンド設計（Vue.js + Nuxt.js）**
+   - TypeScriptによる型安全性
+   - コンポーネント設計による再利用性
+   - 多言語対応（ja.json）
+
+4. **ファイル管理（S3）**
+   - 階層的なディレクトリ構造
+   - UUID形式のファイルキーID
+   - プロフィール画像と添付資料の分離
 
 ### 業務上の注意点
-1. **データの整合性**
-   - 法人ソルバー情報の初期設定は必須
-   - 個人ソルバーの稼働率・単価は定期更新が必要
+1. **データの整合性管理**
+   - 法人ソルバー情報は全ての個人ソルバー操作の前提条件
+   - 稼働率・単価は月次での定期更新が必要
+   - 削除されたユーザーのデータは一括更新時に除外
 
-2. **権限管理**
-   - SOLVER_STAFFは所属法人のデータのみ操作可能
-   - APTは全データにアクセス可能
+2. **権限管理の重要性**
+   - APT: 全法人のデータにフルアクセス可能
+   - SOLVER_STAFF: 所属法人（corporate_id一致）のデータのみアクセス可能
+   - 権限違反は403エラーで即座にブロック
 
-3. **申請フロー**
-   - 候補者→個人ソルバーの変更は取り消し不可
-   - 申請後の修正は一覧画面から再編集
+3. **申請フローの不可逆性**
+   - 候補者→個人ソルバーの昇格は一方向（取り消し不可）
+   - ただし、個人ソルバーの情報は編集・削除が可能
+   - 削除は物理削除（データベースから完全削除）
+
+4. **システム連携**
+   - Salesforce: 新規ソルバー登録時にデータ同期メール送信
+   - Master管理システム: 課題マップ50、東証33業種の選択肢取得
+   - S3: ファイルストレージとして画像・資料を管理
+
+### トラブルシューティング
+1. **よくある問題と解決法**
+   - 「法人ソルバー情報を入力してください」→ 初期設定モーダルから法人情報を登録
+   - 「個人ソルバー登録申請には、全必須項目の入力が必要です」→ 32項目すべての必須項目を確認
+   - 「更新が競合した為、処理に失敗しました」→ 最新データを再取得して再入力
+   - 「ファイルサイズが大きすぎます」→ 画像は2MB以下、資料は5MB以下に縮小
+
+2. **パフォーマンス上の注意**
+   - 大量データの一括更新時は処理時間を考慮
+   - ファイルアップロード時はプログレス表示でユーザビリティ向上
+   - GSIを活用した効率的なデータ検索
+
+3. **セキュリティ上の注意**
+   - 個人情報（PII）の適切な取り扱い
+   - S3ファイルアクセスの権限制御
+   - JWT Tokenの有効期限管理
+
+### システム運用
+1. **監視ポイント**
+   - API のレスポンス時間
+   - DynamoDB の読み取り・書き込み容量
+   - S3 のストレージ使用量
+   - Salesforce 連携の成功率
+
+2. **定期メンテナンス**
+   - 不要なファイルの削除（S3）
+   - インデックスの最適化（DynamoDB）
+   - ログファイルのローテーション
+
+3. **災害復旧**
+   - DynamoDB のポイントインタイムリカバリ
+   - S3 のクロスリージョンレプリケーション
+   - 定期的なバックアップ検証
